--- a/pedallink/src/components/common/header/header.css
+++ b/pedallink/src/components/common/header/header.css
@@ -1,60 +1,75 @@
-.main{
-    display: flex;
-    float: left;
-    align-items: center;
+
+
+.main {
+  display: flex;
+  margin: -1% 0% 0% 0%;
+  align-items: center;
   width: 100%;
   height: 70px;
-  float: left;
+
   gap: 100px;
-padding:10px;
-  
 }
-.logo-text{
+.logo-text {
   display: flex;
   margin: 0% 2% 0% 0%;
   cursor: pointer;
   align-items: center;
-  font-size:large;
-    font-weight: 600;
+  font-size: large;
+  font-weight: 600;
 }
-.logo{
-
-    width: 150px;
-    height: 60px;
-    padding: 2% 0% 1% 40%;
-    float: left;
-    
+.logo {
+  width: 150px;
+  height: 60px;
+  padding: 2% 0% 1% 40%;
+  float: left;
 }
-.ride-about{
-    display: flex;
-    padding-bottom: 8px;
-     gap: 50px;
-    .rtext{
-        font-size: medium;
-        font-weight: 500;
-        cursor: pointer;
-    }
-    .about{
-        display: flex;
-        align-items: center;
-    }
-}
-.profile-icon{
-   
-    display: flex;
-    align-items: center;
+.ride-about {
+  display: flex;
+  padding-bottom: 8px;
+  gap: 50px;
+  .rtext {
     font-size: medium;
     font-weight: 500;
-    background-color: black;
-    color: white;
-    padding: 2px 4px 2px 4px;
-    border-radius: 25px;
     cursor: pointer;
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin: 1% 5% 0% 0%;
-    justify-content: center;
-    
-    
+  }
+  .about {
+    display: flex;
+    align-items: center;
+  }
 }
+.dropbtn {
+
+  display: flex;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+
+
+
