--- a/pedallink/src/pages/profile/Profile.css
+++ b/pedallink/src/pages/profile/Profile.css
@@ -1,4 +1,4 @@
-.home{
+.profile{
     width: 1152px;
     display: flex;
    margin: 1% 0% 0% 15%;
@@ -6,4 +6,6 @@
    padding-top: 2%;
    padding-bottom: 2%;
 }
-
+.footer{
+    margin-top: 9.25%;
+}
